# sppl

./: .clang_complete  .gitignore  .gitmodules  .travis.yml  .uncrustify  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt  test.c  test.h  test.sppl
samples/compiler-llvm/: CMakeLists.txt  LLVMCodeGenerator.cpp  LLVMCodeGenerator.h  LLVMCompiler.h
src/: CMakeLists.txt  Main.cpp  meson.build
src/codegen/: CMakeLists.txt  meson.build
src/common/: BinaryOp.cpp  BinaryOp.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Common.h  Error.cpp  Error.h  Expression.cpp  Expression.h  Expressions.cpp  Expressions.h  Location.cpp  Location.h  Node.cpp  Node.h  Optimizer.cpp  Optimizer.h  Pattern.cpp  Pattern.h  Scope.cpp  Scope.h  Type.cpp  Type.h  TypeChecker.cpp  UnaryOp.cpp  UnaryOp.h  Visitor.cpp  Visitor.h  meson.build
src/compiler/: CMakeLists.txt  Compiler.cpp  Compiler.h  meson.build
src/jit/: CMakeLists.txt  SpplJit.cpp  SpplJit.h  meson.build
src/optimizer/: CMakeLists.txt  GeneralOptimizer.cpp  GeneralOptimizer.h  ParallelOptimizer.cpp  ParallelOptimizer.h  meson.build
src/parser/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Driver.cpp  Driver.h  NodeBuilder.cpp  NodeBuilder.h  Parser.cpp  Parser.h  Parser.y  Scanner.cpp  Scanner.h  Scanner.l  Variant.cpp  Variant.h  meson.build  scanner.l
src/runtime/: CMakeLists.txt  NOTICE  amd64-ucontext.h  channel.c  channel.h  context.S  context.c  defs.h  io.c  io.h  main.c  meson.build  print.c  print.h  queue.c  queue.h  regs.h  runtime.c  runtime.h  task.c  task.h  taskimpl.h
src/semantics/: CMakeLists.txt  CaseChecker.cpp  CaseChecker.h  GenericUnfolder.cpp  GenericUnfolder.h  PatternChecker.cpp  PatternChecker.h  ScopeGenerator.cpp  ScopeGenerator.h  TypeChecker.cpp  TypeChecker.h  meson.build
src/visitor/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  HPInkJetVisitor.cpp  HPInkJetVisitor.h  Optimizer.cpp  Optimizer.h  Printer.h  SkeletonVisitor.cpp  SkeletonVisitor.h  TypeChecker.cpp  Visitor.cpp
test/: meson.build
test/add/: addBoolTrueFalse.sppl  addCharChaStr.sppl  addFloatPosPos.sppl  addFloatZeroZero.sppl  addIntNegNeg.sppl  addIntPosNeg.sppl  meson.build
test/bench/: ackermann.sppl  map.sppl  meson.build
test/cas/: casCountOneInt.sppl  casCountSevenInt.sppl  casCountSixInt.sppl  casCountTwoInt.sppl  meson.build
test/concat/: conBool.sppl  conBoolList.sppl  conChar.sppl  conCharList.sppl  conEmpty.sppl  conFloatList.sppl  conFuncResOne.sppl  conFuncResTwo.sppl  conInt.sppl  conIntList.sppl  conString.sppl  conStringList.sppl  conTuple.sppl  conTupleList.sppl  meson.build
test/div/: divBoolFalseFalse.sppl  divCharChaCha.sppl  divCharChaStr.sppl  divCharStrStr.sppl  divFloatNegPos.sppl  divFloatPosNeg.sppl  divFloatPosPos.sppl  divIntNegNeg.sppl  divIntPosNeg.sppl  divIntZeroZero.sppl  divMixIntFloat.sppl  meson.build
test/dot/: dotMultiDot.sppl  dotNumDot.sppl  meson.build
test/file/: fileImpMainInOther.sppl  fileImpTwo.sppl  fileNestedOne.sppl  fileSupDup.sppl  fileSupThree.sppl  fileSupTwo.sppl  meson.build
test/func/: funcBoolBoolRetBool.sppl  funcCharCharRetChar.sppl  funcCharRetChar.sppl  funcFloatRetFloat.sppl  funcListCharRetListChar.sppl  funcListFloatRetListFloat.sppl  funcListIntRetListInt.sppl  funcListIntToListIntRetListInt.sppl  funcParamCount.sppl  funcParamCountMore.sppl  funcRetChar.sppl  funcRetWrong.sppl  funcStringRetString.sppl  funcStringStringRetString.sppl  funcStringToStringRetString.sppl  funcTupleBoolBoolRetTupleBoolBool.sppl  funcTupleCharCharRetTupleCharChar.sppl  funcTupleIntIntRetTupleIntInt.sppl  funcTupleIntIntToTupleIntIntRetInt.sppl  funcTupleStringStringRetTupleStringString.sppl  meson.build
test/keyword/: keywordBool.sppl  keywordChar.sppl  keywordFloat.sppl  meson.build
test/list/: listAppendChar.sppl  listAppendEmpty.sppl  listAppendInt.sppl  listAppendString.sppl  listBool.sppl  listBoolInChar.sppl  listBoolInString.sppl  listCasEmpty.sppl  listCharInFloat.sppl  listCharInInt.sppl  listCharInString.sppl  listFloatInString.sppl  listIntInChar.sppl  listIntInString.sppl  listListBool.sppl  listListInt.sppl  listListString.sppl  listStringInFloat.sppl  listTupleBool.sppl  listTupleFloat.sppl  listTupleInt.sppl  listTupleString.sppl  meson.build
test/mod/: meson.build  modBoolFalseFalse.sppl  modBoolTrueFalse.sppl  modCharChaStr.sppl  modCharStrCha.sppl  modCharStrStr.sppl  modFloatNegNeg.sppl  modFloatNegPos.sppl  modIntPosNeg.sppl  modIntPosPos.sppl  modIntZeroZero.sppl  modMixFloatInt.sppl
test/mul/: meson.build  mulBoolFalseTrue.sppl  mulBoolTrueFalse.sppl  mulCharChaCha.sppl  mulCharChaStr.sppl  mulFloatNegNeg.sppl  mulFloatNegPos.sppl  mulFloatZeroZero.sppl  mulIntNegPos.sppl  mulIntPosPos.sppl  mulIntZeroZero.sppl  mulMixFloatInt.sppl
test/other/: fac.sppl  fizzbuzz.sppl  literals.sppl  mergesort.sppl  meson.build  operators.sppl  planets.sppl  signatures.sppl  structures.sppl  superadd.sppl
test/prec/: meson.build  precAndOr.sppl  precEqualAnd.sppl  precNegMul.sppl
test/scope/: meson.build  scopeSameFunc.sppl  scopeSamePat.sppl  scopeUndeclId.sppl
test/sig/: meson.build  patLengthLessInt.sppl  patLengthMoreInt.sppl  sigLengthFiveInt.sppl  sigLengthFourInt.sppl  sigLengthNineInt.sppl  sigLengthSevenInt.sppl  sigLengthSixInt.sppl  sigLengthTwoInt.sppl
test/sub/: meson.build  subBoolFalseFalse.sppl  subBoolNegative.sppl  subCharChaStr.sppl  subCharStrCha.sppl  subCharStrStr.sppl  subFloatNegPos.sppl  subFloatPosPos.sppl  subIntNegNeg.sppl  subIntNegPos.sppl  subIntPosNeg.sppl  subMixFloatInt.sppl
test/tuple/: meson.build  tupleEmptyString.sppl  tupleListBool.sppl  tupleListFloat.sppl  tupleListInt.sppl  (+12 more)
tests/: AddTest.cpp  BinBoolTest.cpp  BinTest.cpp  BinValTest.cpp  CMakeLists.txt  CasTest.cpp  ConTest.cpp  DivTest.cpp  DotTest.cpp  FileTest.cpp  FuncTest.cpp  KeywordTest.cpp  ListTest.cpp  Main.cpp  ModTest.cpp  MulTest.cpp  PrecedenceTest.cpp  ScopeTest.cpp  SigTest.cpp  SubTest.cpp  Test.cpp  Test.h  TestMaster.cpp  TestMaster.h  TupleTest.cpp  WhenTest.cpp  WildTest.cpp  main.cpp
(+649 files in other folders)
