option('debug', type : 'boolean', value : true, description : 'Debug mode')
option('static', type : 'boolean', value : false, description : 'Compile with static libs')
option('line', type : 'boolean', value : true, description : 'Lines support in bison and flex')
option('ccpp', type : 'boolean', value : true, description : 'C++ Compiler')
option('chaskell', type : 'boolean', value : false, description : 'Haskell Compiler')
option('cgnuasm', type : 'boolean', value : false, description : 'GNU Assembly Compiler')
option('cllvm', type : 'boolean', value : false, description : 'LLVM Intermediate Representation Compiler')
option('optimizer', type : 'boolean', value : true, description : 'Optimizer description')
option('runtime', type : 'boolean', value : true, description : 'Runtime')
option('interpreter', type : 'boolean', value : false, description : 'JIT interpreter using LLVM')
option('jit', type : 'boolean', value : false, description : 'LLVM JIT Compiler')
option('test', type : 'boolean', value : false, description : 'Test')
