add_subdirectory(common)
add_subdirectory(parser)
add_subdirectory(compiler)
add_subdirectory(codegen)
add_subdirectory(semantics)
if (OPTIMIZER OR CCPP)
    add_subdirectory(optimizer)
endif()
if (CCPP)
    add_subdirectory(runtime)
endif()
if (JIT OR INTERPRETER)
    add_subdirectory(jit)
endif()

add_executable(scc Main.cpp)
target_link_libraries(scc compiler)

install(TARGETS scc
        RUNTIME DESTINATION bin)
