if(CPPC)
    add_subdirectory(cpp)
    include_directories(cpp)
endif()
if(CHASKELL)
    add_subdirectory(haskell)
    include_directories(haskell)
endif()
if(CGNUASM)
    add_subdirectory(gnuasm)
    include_directories(gnuasm)
endif()
if(CLLVM)
    add_subdirectory(llvm)
    include_directories(llvm)
endif()
if(CPPRINTER)
    add_subdirectory(pprinter)
    include_directories(pprinter)
endif()
