tests += files(['addFloatNegNeg.sppl', 'addFloatNegPos.sppl', 'addFloatPosNeg.sppl', 
                'addFloatPosPos.sppl', 'addFloatZeroZero.sppl', 'addIntNegNeg.sppl', 
                'addIntNegPos.sppl', 'addIntPosNeg.sppl', 'addIntPosPos.sppl', 
                'addIntZeroZero.sppl'])

tests_fail += files(['addBoolFalseFalse.sppl', 'addBoolFalseTrue.sppl', 'addBoolTrueFalse.sppl', 
                     'addBoolTrueTrue.sppl', 'addCharChaCha.sppl', 'addCharChaStr.sppl', 
                     'addCharStrCha.sppl', 'addCharStrStr.sppl', 'addMixFloatInt.sppl', 
                     'addMixIntFloat.sppl'])
