tests += files(['casCountEightInt.sppl', 'casCountFiveInt.sppl', 'casCountFourInt.sppl', 
                'casCountNineInt.sppl',  'casCountOneInt.sppl', 'casCountSevenInt.sppl', 
                'casCountSixInt.sppl', 'casCountTenInt.sppl', 'casCountThreeInt.sppl', 
                'casCountTwoInt.sppl', 'casCountZeroInt.sppl'])

tests_fail += files(['casCountNoInt.sppl'])
