tests += files(['conBoolList.sppl', 'conCharList.sppl', 'conFloatList.sppl', 
                'conFuncResOne.sppl', 'conFuncResTwo.sppl', 'conIntList.sppl', 
                'conNestedList.sppl', 'conStringList.sppl', 'conString.sppl', 
                'conTupleList.sppl'])

tests_fail += files(['conBool.sppl', 'conChar.sppl', 'conEmpty.sppl', 
                     'conFloat.sppl', 'conInt.sppl', 'conMix.sppl', 
                     'conTuple.sppl'])
