tests += files(['divFloatNegNeg.sppl', 'divFloatNegPos.sppl',
                'divFloatPosNeg.sppl', 'divFloatPosPos.sppl', 'divFloatZeroZero.sppl', 
                'divIntNegNeg.sppl', 'divIntNegPos.sppl', 'divIntPosNeg.sppl', 
                'divIntPosPos.sppl', 'divIntZeroZero.sppl'])

tests_fail += files(['divBoolFalseFalse.sppl', 'divBoolFalseTrue.sppl', 'divBoolTrueFalse.sppl', 
                     'divBoolTrueTrue.sppl', 'divCharChaCha.sppl', 'divCharChaStr.sppl', 
                     'divCharStrCha.sppl', 'divCharStrStr.sppl', 'divMixFloatInt.sppl', 
                     'divMixIntFloat.sppl'])
