tests += files(['fileImpDup.sppl', 'fileImpMainInOther.sppl', 'fileImpNestedDup.sppl', 'fileImpNested.sppl', 'fileImpOne.sppl', 'fileImpThree.sppl', 'fileImpTwice.sppl', 'fileImpTwo.sppl', 'fileIncludeWrong.sppl', 'fileMainInOther.sppl', 'fileNestedDupOne.sppl', 'fileNestedDupTwo.sppl', 'fileNestedOne.sppl', 'fileNestedTwo.sppl', 'fileSupDup.sppl', 'fileSupOne.sppl', 'fileSupThree.sppl', 'fileSupTwo.sppl', ])
