tests += files(['funcBoolBoolRetBool.sppl', 'funcBoolRetBool.sppl', 'funcBoolToBoolRetBool.sppl', 
                'funcCharCharRetChar.sppl', 'funcCharRetChar.sppl', 'funcCharToCharRetChar.sppl', 
                'funcFloatFloatRetFloat.sppl', 'funcFloatRetFloat.sppl', 'funcFloatToFloatRetFloat.sppl', 
                'funcIntIntRetInt.sppl', 'funcIntRetInt.sppl', 'funcIntToIntRetInt.sppl', 
                'funcIntToIntRetToIntRetToInt.sppl', 'funcListBoolRetListBool.sppl', 'funcListCharRetListChar.sppl', 
                'funcListFloatRetListFloat.sppl', 'funcListIntRetListInt.sppl', 'funcListIntToListIntRetListInt.sppl', 
                'funcListStringRetListString.sppl', 'funcParamCount.sppl', 'funcRetBool.sppl', 'funcRetChar.sppl', 
                'funcRetFloat.sppl', 'funcRetInt.sppl', 'funcRetString.sppl', 'funcStringRetString.sppl', 
                'funcStringStringRetString.sppl', 'funcStringToStringRetString.sppl', 'funcTupleBoolBoolRetTupleBoolBool.sppl', 
                'funcTupleCharCharRetTupleCharChar.sppl', 'funcTupleFloatFloatRetTupleFloatFloat.sppl', 'funcTupleIntIntRetTupleIntInt.sppl', 
                'funcTupleIntIntToTupleIntIntRetInt.sppl', 'funcTupleStringStringRetTupleStringString.sppl'])

tests_fail += files(['funcFuncOverloadLength.sppl', 'funcFuncOverloadType.sppl', 'funcParamCountLess.sppl', 
                     'funcParamCountMore.sppl', 'funcRetWrong.sppl'])
