tests += files(['listAppendBool.sppl', 'listAppendChar.sppl', 'listAppendEmpty.sppl', 
                'listAppendFloat.sppl', 'listAppendInt.sppl', 'listAppendString.sppl', 
                'listBool.sppl', 'listCasEmpty.sppl', 'listChar.sppl', 'listFloat.sppl', 
                'listInt.sppl', 'listListBool.sppl', 'listListChar.sppl', 'listListFloat.sppl', 
                'listListInt.sppl', 'listListListInt.sppl', 'listListString.sppl', 'listLongInt.sppl', 
                'listNestedDifLengthInt.sppl', 'listString.sppl', 'listTupleBool.sppl', 
                'listTupleChar.sppl', 'listTupleFloat.sppl', 'listTupleInt.sppl', 'listTupleString.sppl'])

tests_fail += files(['listBoolInChar.sppl', 'listBoolInFloat.sppl', 'listBoolInInt.sppl', 
                      'listBoolInString.sppl', 'listCharInBool.sppl', 'listCharInFloat.sppl', 
                      'listCharInInt.sppl', 'listCharInString.sppl', 'listFloatInBool.sppl', 
                      'listFloatInChar.sppl', 'listFloatInInt.sppl', 'listFloatInString.sppl', 
                      'listIntInBool.sppl', 'listIntInChar.sppl', 'listIntInFloat.sppl', 
                      'listIntInString.sppl', 'listStringInChar.sppl', 'listStringInFloat.sppl', 
                      'listStringInInt.sppl', 'listStringInBool.sppl','listMixTypes.sppl'])
