tests += files(['modFloatNegNeg.sppl', 'modFloatNegPos.sppl', 'modFloatPosNeg.sppl', 
                'modFloatPosPos.sppl', 'modFloatZeroZero.sppl', 'modIntNegNeg.sppl', 
                'modIntNegPos.sppl', 'modIntPosNeg.sppl', 'modIntPosPos.sppl', 
                'modIntZeroZero.sppl'])

tests_fail += files(['modBoolFalseFalse.sppl', 'modBoolFalseTrue.sppl', 'modBoolTrueFalse.sppl', 
                     'modBoolTrueTrue.sppl', 'modCharChaCha.sppl', 'modCharChaStr.sppl', 
                     'modCharStrCha.sppl', 'modCharStrStr.sppl', 'modMixFloatInt.sppl', 
                     'modMixIntFloat.sppl'])
