tests += files(['mulFloatNegNeg.sppl', 'mulFloatNegPos.sppl', 'mulFloatPosNeg.sppl', 
                'mulFloatPosPos.sppl', 'mulFloatZeroZero.sppl', 'mulIntNegNeg.sppl', 
                'mulIntNegPos.sppl', 'mulIntPosNeg.sppl', 'mulIntPosPos.sppl', 
                'mulIntZeroZero.sppl'])

tests_fail += files(['mulBoolFalseFalse.sppl', 'mulBoolFalseTrue.sppl', 'mulBoolTrueFalse.sppl', 
                     'mulBoolTrueTrue.sppl', 'mulCharChaCha.sppl', 'mulCharChaStr.sppl', 
                     'mulCharStrCha.sppl', 'mulCharStrStr.sppl', 'mulMixFloatInt.sppl', 
                     'mulMixIntFloat.sppl'])
