tests += files(['patLengthSameInt.sppl', 'sigLengthEightInt.sppl', 'sigLengthFiveInt.sppl', 
                'sigLengthFourInt.sppl', 'sigLengthNineInt.sppl', 'sigLengthOneInt.sppl', 
                'sigLengthSevenInt.sppl', 'sigLengthSixInt.sppl', 'sigLengthTenInt.sppl', 
                'sigLengthThreeInt.sppl', 'sigLengthTwoInt.sppl', 'sigLengthZeroInt.sppl'])
tests_fail += files(['patLengthLessInt.sppl', 'patLengthMoreInt.sppl'])
