tests += files(['subFloatNegNeg.sppl', 'subFloatNegPos.sppl', 'subFloatPosNeg.sppl', 
                'subFloatPosPos.sppl', 'subFloatZeroZero.sppl', 'subIntNegNeg.sppl', 
                'subIntNegPos.sppl', 'subIntPosNeg.sppl', 'subIntPosPos.sppl', 
                'subIntZeroZero.sppl'])

tests_fail += files(['subBoolFalseFalse.sppl', 'subBoolFalseTrue.sppl', 'subBoolNegative.sppl', 
                     'subBoolTrueFalse.sppl', 'subBoolTrueTrue.sppl', 'subCharChaCha.sppl', 
                     'subCharChaStr.sppl', 'subCharStrCha.sppl', 'subCharStrStr.sppl', 
                     'subMixFloatInt.sppl', 'subMixIntFloat.sppl'])
