tests += files(['tupleListBool.sppl', 'tupleListChar.sppl', 'tupleListFloat.sppl', 
                'tupleListInt.sppl', 'tupleListString.sppl', 'tupleMixed.sppl', 
                'tupleNested.sppl', 'tupleSuperNested.sppl', 'tupleThreeBool.sppl', 
                'tupleThreeChar.sppl', 'tupleThreeFloat.sppl', 'tupleThreeInt.sppl', 
                'tupleThreeString.sppl', 'tupleTwoBool.sppl', 'tupleTwoChar.sppl', 
                'tupleTwoFloat.sppl', 'tupleTwoInt.sppl', 'tupleTwoNested.sppl', 
                'tupleTwoString.sppl'])

tests_fail += files(['tupleEmptyBool.sppl', 'tupleEmptyChar.sppl', 'tupleEmptyFloat.sppl', 
                     'tupleEmptyInt.sppl', 'tupleEmpty.sppl', 'tupleEmptyString.sppl', 
                     'tupleOneBool.sppl', 'tupleOneChar.sppl', 'tupleOneFloat.sppl', 
                     'tupleOneInt.sppl', 'tupleOneString.sppl', 'tupleWrongType.sppl'])
