tests += files(['whenAnd.sppl', 'whenEqual.sppl', 'whenFalse.sppl', 
                'whenFuncBool.sppl', 'whenGreatEqual.sppl', 'whenGreat.sppl', 
                'whenLessEqual.sppl', 'whenLess.sppl', 'whenMultiple.sppl', 
                'whenNotEqual.sppl', 'whenOr.sppl', 'whenTrue.sppl'])

tests_fail += files(['whenEmpty.sppl', 'whenFuncNotBool.sppl', 'whenNotScope.sppl', 
                     'whenWhen.sppl'])
